charts/longhorn_service.yml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  selector:
    app: longhorn-ui
  type: LoadBalancer
  loadBalancerIP: 192.168.1.144
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
