charts/grafana_ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations: 
    traefik.ingress.kubernetes.io/custom-response-headers: "Access-Control-Allow-Origin:*"

spec:
  rules:
    - host: ziqqnode01
      http:
        paths:
          - path: /login
            pathType: Exact
            backend:
              service:
                name:  ziqq-k3s-grafana
                port:
                  number: 80
